--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
             <artifactId>jersey-container-servlet</artifactId>
             <version>2.39</version>
         </dependency>
+        
+	    <dependency>
+			<groupId>org.glassfish.jersey.inject</groupId>
+			<artifactId>jersey-hk2</artifactId>
+			<version>2.39</version>
+		</dependency>
 
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
